# scrapy-cookiecutter

./: .pre-commit-config.yaml  LICENSE  Pipfile  README.md  cookiecutter.json  dev.sh  generate.sh  pyproject.toml  requirements_dev.txt
hooks/: post_gen_project.py
tests/: test_bake_project.py  utils.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  dev.sh  docker-compose.yml  requirements.txt  requirements_dev.txt  requirements_scrapydweb.txt  scrapy.cfg  scrapyd.conf  setup.cfg  setup.py
{{cookiecutter.project_slug}}/compose/local/scrapy/: Dockerfile
{{cookiecutter.project_slug}}/compose/production/scrapyd/: Dockerfile  cronjob.sh  scrapyd.conf
{{cookiecutter.project_slug}}/compose/production/scrapyd/async_scrapyd/: setup.py
{{cookiecutter.project_slug}}/compose/production/scrapyd/async_scrapyd/async_scrapyd/: runner.py
{{cookiecutter.project_slug}}/compose/production/scrapydweb/: Dockerfile  scrapydweb_settings_v10.py
{{cookiecutter.project_slug}}/envs/local/: env
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: items.py  settings.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/celery/: app.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/models/: models.py  sessions.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/pipelines/: celery.py  pipelines.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/spiders/: spider.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/utils/: logging.py
